# ACE_est-Fitness

./: Jenkinsfile  README.md  flask-app-deployment.yaml  pyproject.toml  secret-file
.github/workflows/: pylint.yml
deployment/Blue-Green-Deployment/: aceessfitness-blue.yaml  aceessfitness-green.yaml  aceessfitness-service.yaml
deployment/deployment/: flask-app-deployment.yaml
deployment/deployment/A-B_deployment/: stable.yml
deployment/deployment/Blue-Green_deployment/: aceessfitness-blue.yaml  aceessfitness-green.yaml
deployment/deployment/Canary_Deployment/: v1.yaml  v2.yaml
deployment/deployment/RollingUpdate_deployment/: rolling.yml
deployment/deployment/Shadow_Deployment/: aceessfitness-shadow.yaml  aceessfitness-stable.yaml
tests/: test_aceest_fitness.py
